# kitchen

./: .actrc  .beads  .editorconfig  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEBUG.md  DEPLOYMENT.md  LICENSE  NEOVIM_SETUP.md  README.md  RECIPE_INDEX_IMPLEMENTATION_NOTES.md  TESTING_FEATURE_BRANCHES.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-run.sh  docker-stop.sh  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  TESTING.md  alembic.ini  debug_server.py  entrypoint.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  restore_db.sh  restore_db_internal.sh  test_fallback_import.sh  test_import.sh  test_meal_plans_api.sh  test_reimport.sh  test_retire_weeks.sh  test_schedules_api.sh  test_start_on_week.sh
backend/alembic/: env.py
backend/alembic/versions/: 20251106_2309_44df98c1fabd_initial_schema_with_week_templates_.py  20251109_1757_dbd2183291d7_add_sequence_id_to_mealplaninstance.py  20251109_1900_a3f4e8b2c9d1_add_description_to_recipe.py  20251110_1414_5f8f8c3b7c2e_add_jar_and_package_units_fix_to_taste_.py  20251110_1611_a7102d195b91_make_ingredient_unit_nullable.py  20251111_1025_f63e1be88176_add_ingredient_normalization_tables.py  20251111_2130_d8f9e2a1b3c4_make_ingredient_quantity_nullable.py  20251112_0100_convert_units_to_lowercase.py  20251118_0520_492e0e5e3bc2_add_source_recipe_details_to_grocery_.py  (+8 more)
backend/app/: main.py
backend/scripts/: migrate_prep_notes.py  seed_dev_data.py
backend/tests/: conftest.py  factories.py
(+193 files in other folders)
