[project]
name = "kitchen-backend"
version = "0.1.0"
description = "Backend for Roane's Kitchen meal planning application"
requires-python = ">=3.11"

[tool.ruff]
# Line length to match AGENTS.md guidelines
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Enable recommended rules plus imports
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (FastAPI uses this)
    "T201",  # print found (we use print in debug scripts)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T201"]  # Allow prints in tests
"scripts/**/*.py" = ["T201"]  # Allow prints in scripts
"alembic/**/*.py" = ["F401"]  # Allow unused imports in migrations

[tool.ruff.lint.isort]
# Match the import style from AGENTS.md: stdlib, third-party, local
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["app"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Auto-detect line ending
line-ending = "auto"
